analysis/spring-framework/step_1/logs/2331-70252a7.log
Exception in thread "DisconnectableInputStream source reader" org.gradle.api.UncheckedIOException: java.io.IOException: Bad file descriptor
	at org.gradle.internal.UncheckedException.throwAsUncheckedException(UncheckedException.java:43)
	at org.gradle.util.DisconnectableInputStream$1.run(DisconnectableInputStream.java:125)
	at java.lang.Thread.run(Thread.java:748)
Caused by: java.io.IOException: Bad file descriptor
	at java.io.FileInputStream.readBytes(Native Method)
	at java.io.FileInputStream.read(FileInputStream.java:255)
	at java.io.BufferedInputStream.fill(BufferedInputStream.java:246)
	at java.io.BufferedInputStream.read1(BufferedInputStream.java:286)
	at java.io.BufferedInputStream.read(BufferedInputStream.java:345)
	at org.gradle.util.DisconnectableInputStream$1.run(DisconnectableInputStream.java:96)
	... 1 more
:buildSrc:compileJava NO-SOURCE
:buildSrc:compileGroovy
:buildSrc:processResources
:buildSrc:classes
:buildSrc:jar
:buildSrc:assemble
:buildSrc:compileTestJava NO-SOURCE
:buildSrc:compileTestGroovy NO-SOURCE
:buildSrc:processTestResources NO-SOURCE
:buildSrc:testClasses UP-TO-DATE
:buildSrc:test NO-SOURCE
:buildSrc:check UP-TO-DATE
:buildSrc:build
:assemble
:build
:spring-core:cglibRepackJar
:spring-core:objenesisRepackJar
:spring-jcl:compileKotlin
:spring-jcl:compileJava
:spring-jcl:copyMainKotlinClasses
:spring-jcl:processResources NO-SOURCE
:spring-jcl:classes
:spring-jcl:jar
:spring-core:compileKotlin
:spring-core:compileJava
:spring-core:copyMainKotlinClasses
:spring-core:processResources NO-SOURCE
:spring-core:classes
:spring-core:jar
:spring-beans:compileKotlin
Using kotlin incremental compilation
:spring-beans:compileJava
:spring-beans:copyMainKotlinClasses
:spring-beans:processResources
:spring-beans:classes
:spring-beans-groovy:compileKotlin
:spring-beans-groovy:compileJava SKIPPED
:spring-beans-groovy:compileGroovy
:spring-beans-groovy:copyMainKotlinClasses
:spring-beans-groovy:processResources NO-SOURCE
:spring-beans-groovy:classes
:spring-beans:jar
:spring-aop:compileKotlin
:spring-aop:compileJava
:spring-aop:copyMainKotlinClasses
:spring-aop:processResources
:spring-aop:classes
:spring-aop:jar
:spring-aop:sourcesJar
:spring-aop:assemble
:spring-aop:build
:spring-expression:compileKotlin
:spring-expression:compileJava
:spring-expression:copyMainKotlinClasses
:spring-expression:processResources
:spring-expression:classes
:spring-expression:jar
:spring-instrument:compileKotlin
:spring-instrument:compileJava
:spring-instrument:copyMainKotlinClasses
:spring-instrument:processResources NO-SOURCE
:spring-instrument:classes
:spring-instrument:jar
:spring-context:compileKotlin
Using kotlin incremental compilation
w: /home/ubuntu/bugs/spring-framework/spring-context/src/main/kotlin/org/springframework/context/support/BeanDefinitionDsl.kt: (60, 3): Protected function call from public-API inline function is deprecated
w: /home/ubuntu/bugs/spring-framework/spring-context/src/main/kotlin/org/springframework/context/support/BeanDefinitionDsl.kt: (94, 3): Protected function call from public-API inline function is deprecated
:spring-context:compileJava
:spring-context:compileGroovy NO-SOURCE
:spring-context:copyMainKotlinClasses
:spring-context:processResources
:spring-context:classes
:spring-context:jar
:spring-tx:compileKotlin
:spring-tx:compileJava
:spring-tx:copyMainKotlinClasses
:spring-tx:processResources
:spring-tx:classes
:spring-tx:jar
:spring-jdbc:compileKotlin
Using kotlin incremental compilation
:spring-jdbc:compileJava
:spring-jdbc:copyMainKotlinClasses
:spring-jdbc:processResources
:spring-jdbc:classes
:spring-jdbc:jar
:spring-context-support:compileKotlin
:spring-context-support:compileJava
:spring-context-support:copyMainKotlinClasses
:spring-context-support:processResources
:spring-context-support:classes
:spring-context-support:jar
:spring-oxm:compileKotlin
:spring-oxm:compileJava
:spring-oxm:copyMainKotlinClasses
:spring-oxm:processResources
:spring-oxm:classes
:spring-oxm:jar
:spring-web:compileKotlin
Using kotlin incremental compilation
:spring-web:compileJava/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/AbstractListenerReadPublisher.java:225: error: cannot find symbol
				if (Operators.checkRequest(n, publisher.subscriber)) {
				             ^
  symbol:   method checkRequest(long,Subscriber<CAP#1>)
  location: class Operators
  where T is a type-variable:
    T extends Object declared in method <T>request(AbstractListenerReadPublisher<T>,long)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: T from capture of ? super T
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/AbstractListenerReadPublisher.java:226: error: cannot find symbol
					Operators.addAndGet(DEMAND_FIELD_UPDATER, publisher, n);
					         ^
  symbol:   method addAndGet(AtomicLongFieldUpdater<AbstractListenerReadPublisher>,AbstractListenerReadPublisher<T>,long)
  location: class Operators
  where T is a type-variable:
    T extends Object declared in method <T>request(AbstractListenerReadPublisher<T>,long)
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/AbstractListenerReadPublisher.java:243: error: cannot find symbol
				if (Operators.checkRequest(n, publisher.subscriber)) {
				             ^
  symbol:   method checkRequest(long,Subscriber<CAP#1>)
  location: class Operators
  where T is a type-variable:
    T extends Object declared in method <T>request(AbstractListenerReadPublisher<T>,long)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: T from capture of ? super T
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/AbstractListenerReadPublisher.java:244: error: cannot find symbol
					Operators.addAndGet(DEMAND_FIELD_UPDATER, publisher, n);
					         ^
  symbol:   method addAndGet(AtomicLongFieldUpdater<AbstractListenerReadPublisher>,AbstractListenerReadPublisher<T>,long)
  location: class Operators
  where T is a type-variable:
    T extends Object declared in method <T>request(AbstractListenerReadPublisher<T>,long)
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/AbstractListenerReadPublisher.java:271: error: cannot find symbol
				if (Operators.checkRequest(n, publisher.subscriber)) {
				             ^
  symbol:   method checkRequest(long,Subscriber<CAP#1>)
  location: class Operators
  where T is a type-variable:
    T extends Object declared in method <T>request(AbstractListenerReadPublisher<T>,long)
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: T from capture of ? super T
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/AbstractListenerReadPublisher.java:272: error: cannot find symbol
					Operators.addAndGet(DEMAND_FIELD_UPDATER, publisher, n);
					         ^
  symbol:   method addAndGet(AtomicLongFieldUpdater<AbstractListenerReadPublisher>,AbstractListenerReadPublisher<T>,long)
  location: class Operators
  where T is a type-variable:
    T extends Object declared in method <T>request(AbstractListenerReadPublisher<T>,long)
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/WriteResultPublisher.java:153: error: cannot find symbol
				Operators.checkRequest(n, publisher.subscriber);
				         ^
  symbol:   method checkRequest(long,Subscriber<CAP#1>)
  location: class Operators
  where CAP#1 is a fresh type-variable:
    CAP#1 extends Object super: Void from capture of ? super Void
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/ChannelSendOperator.java:65: error: cannot find symbol
		if (key == IntAttr.PREFETCH) {
		           ^
  symbol:   variable IntAttr
  location: class ChannelSendOperator<T>
  where T is a type-variable:
    T extends Object declared in class ChannelSendOperator
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/http/server/reactive/ChannelSendOperator.java:68: error: cannot find symbol
		if (key == ScannableAttr.PARENT) {
		           ^
  symbol:   variable ScannableAttr
  location: class ChannelSendOperator<T>
  where T is a type-variable:
    T extends Object declared in class ChannelSendOperator
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/bind/support/WebExchangeDataBinder.java:99: error: cannot find symbol
					tuple.getT1().forEach((key, values) -> addBindValue(result, key, values));
					     ^
  symbol:   method getT1()
  location: variable tuple of type Void
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/bind/support/WebExchangeDataBinder.java:100: error: cannot find symbol
					tuple.getT2().forEach((key, values) -> addBindValue(result, key, values));
					     ^
  symbol:   method getT2()
  location: variable tuple of type Void
/home/ubuntu/bugs/spring-framework/spring-web/src/main/java/org/springframework/web/bind/support/WebExchangeDataBinder.java:101: error: cannot find symbol
					tuple.getT3().forEach((key, values) -> addBindValue(result, key, values));
					     ^
  symbol:   method getT3()
  location: variable tuple of type Void
12 errors
 FAILED
:spring-web:copyMainKotlinClasses SKIPPED

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-web:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output.

BUILD FAILED

Total time: 24.771 secs
